modal scrollbar bugfix
usunięto wyświetlanie scrollbara w modalu

--- a/src/components/movieModal/movieModal.scss
+++ b/src/components/movieModal/movieModal.scss
@@ -49,6 +49,7 @@
   border-radius: 15px;
   box-shadow: 0 0 10px 3px #0009;
 
+  scrollbar-width: none;
   &::-webkit-scrollbar {
     display: none;
   }
